fix(chart): move drawing toolbar to right side, away from TradingView logo
Toolbar now sits at right: 64px (just left of the price scale) instead of
left: 4px which overlapped the LWC attribution logo. Color/width popups
now open to the left.

--- a/app/src/components/chart/ChartToolbar.module.css
+++ b/app/src/components/chart/ChartToolbar.module.css
@@ -2,7 +2,7 @@
 
 .toolbar {
   position: absolute;
-  left: 4px;
+  right: 64px;
   top: 4px;
   bottom: 4px;
   width: 28px;
@@ -93,7 +93,7 @@
 
 .popup {
   position: absolute;
-  left: 30px;
+  right: 30px;
   top: 0;
   display: flex;
   flex-wrap: wrap;
